--- a/valantinez/yes.html
+++ b/valantinez/yes.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="tenor-gif-embed" data-postid="18383650" data-share-method="host" data-aspect-ratio="1.06667" data-width="100%"><a href="https://tenor.com/view/love-you-gif-18383650">Love You GIF</a>from <a href="https://tenor.com/search/love-gifs">Love GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         
-        <h1>AM  GLAD YOU WANNA BE MY VALANTINE SAMMI-SAN🤗</h1>
+        <h1>AM  GLAD YOU WANNA BE MY VALANTINE .......🤗</h1>
         <h2></h2>
         <div class="btn">
             <a href="no.html">What I Think About You </a>
