--- a/valantinez/valantine.html
+++ b/valantinez/valantine.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="tenor-gif-embed" data-postid="18255099" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/kakaotalk-ompangie-emoticon-pentol-full-of-love-gif-18255099">Kakaotalk Ompangie Sticker</a>from <a href="https://tenor.com/search/kakaotalk-stickers">Kakaotalk Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         
-        <h1>WILL YOU BE MY VALANTINE HUSBANTO?🤗</h1>
+        <h1>WILL YOU BE MY VALANTINE?🤗</h1>
         <h2></h2>
         <div class="btn">
             <a href="yes.html">Yes </a>
